Ass6/parser.output
Terminals which are not used

   COMMENT
   CHSIGN
   SIZEOF


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 67 conflicts: 2 reduce/reduce
State 165 conflicts: 2 shift/reduce
State 167 conflicts: 1 shift/reduce
State 231 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl
    6     | error

    7 varDecl: typeSpec varDeclList SEMICOLON
    8        | error varDeclList SEMICOLON
    9        | typeSpec error SEMICOLON

   10 scopedVarDecl: STATIC typeSpec varDeclList SEMICOLON
   11              | typeSpec varDeclList SEMICOLON

   12 varDeclList: varDeclList COMMA varDeclInit
   13            | varDeclInit
   14            | error
   15            | varDeclList COMMA error

   16 varDeclInit: varDeclId
   17            | varDeclId COLON simpleExp
   18            | error COLON simpleExp

   19 varDeclId: ID
   20          | ID LB NUMCONST RB
   21          | ID LB error
   22          | error RB

   23 typeSpec: INT
   24         | BOOL
   25         | CHAR

   26 funDecl: typeSpec ID LP parms RP stmt
   27        | ID LP parms RP stmt
   28        | typeSpec error
   29        | typeSpec ID LP error
   30        | typeSpec ID LP parms RP error
   31        | ID LP error
   32        | ID LP parms RP error

   33 parms: parmList
   34      | /* empty */

   35 parmList: parmList SEMICOLON parmTypeList
   36         | parmTypeList
   37         | parmList SEMICOLON error
   38         | error

   39 parmTypeList: typeSpec parmIdList
   40             | typeSpec error

   41 parmIdList: parmIdList COMMA parmId
   42           | parmId
   43           | parmIdList COMMA error
   44           | error

   45 parmId: ID
   46       | ID LB RB

   47 stmt: matched
   48     | unmatched

   49 matched: expStmt
   50        | compoundStmt
   51        | returnStmt
   52        | breakStmt
   53        | matchedselectStmt
   54        | matchediterStmt
   55        | IF error
   56        | IF error ELSE matched
   57        | IF error THEN matched ELSE matched
   58        | WHILE error DO matched
   59        | WHILE error
   60        | FOR ID ASS error DO matched
   61        | FOR error

   62 unmatched: unmatchedselectStmt
   63          | unmatchediterStmt
   64          | IF error THEN stmt
   65          | IF error THEN matched ELSE unmatched

   66 expStmt: exp SEMICOLON
   67        | error SEMICOLON

   68 compoundStmt: LCB localDecls stmtList RCB

   69 localDecls: localDecls scopedVarDecl
   70           | /* empty */

   71 stmtList: stmtList stmt
   72         | /* empty */

   73 matchedselectStmt: IF simpleExp THEN matched ELSE matched

   74 unmatchedselectStmt: IF simpleExp THEN stmt
   75                    | IF simpleExp THEN matched ELSE unmatched

   76 matchediterStmt: WHILE simpleExp DO matched
   77                | FOR ID ASS iterrange DO matched

   78 unmatchediterStmt: WHILE simpleExp DO unmatched
   79                  | FOR ID ASS iterrange DO unmatched

   80 iterrange: simpleExp TO simpleExp
   81          | simpleExp TO simpleExp BY simpleExp
   82          | simpleExp TO error
   83          | error BY error
   84          | simpleExp TO simpleExp BY error

   85 returnStmt: RETURN exp SEMICOLON
   86           | RETURN SEMICOLON
   87           | RETURN error SEMICOLON

   88 breakStmt: BREAK SEMICOLON

   89 exp: mutable ASS exp
   90    | mutable ADDASS exp
   91    | mutable SUBASS exp
   92    | mutable MULASS exp
   93    | mutable DIVASS exp
   94    | error ASS exp
   95    | error ADDASS exp
   96    | error SUBASS exp
   97    | error MULASS exp
   98    | error DIVASS exp
   99    | mutable ASS error
  100    | mutable ADDASS error
  101    | mutable SUBASS error
  102    | mutable MULASS error
  103    | mutable DIVASS error
  104    | mutable INC
  105    | mutable DEC
  106    | error INC
  107    | error DEC
  108    | simpleExp

  109 simpleExp: simpleExp OR andExp
  110          | andExp
  111          | simpleExp OR error

  112 andExp: andExp AND unaryRelExp
  113       | unaryRelExp
  114       | andExp AND error

  115 unaryRelExp: NOT unaryRelExp
  116            | relExp
  117            | NOT error

  118 relExp: minmaxExp relop minmaxExp
  119       | minmaxExp
  120       | minmaxExp relop error

  121 relop: LEQ
  122      | LT
  123      | GT
  124      | GEQ
  125      | EQ
  126      | NEQ

  127 minmaxExp: minmaxExp minmaxop sumExp
  128          | sumExp

  129 minmaxop: MAX
  130         | MIN

  131 sumExp: sumExp sumop mulExp
  132       | mulExp
  133       | sumExp sumop error

  134 sumop: ADD
  135      | SUB

  136 mulExp: mulExp mulop unaryExp
  137       | unaryExp
  138       | mulExp mulop error

  139 mulop: MUL
  140      | DIV
  141      | MOD

  142 unaryExp: unaryop unaryExp
  143         | factor
  144         | unaryop error

  145 unaryop: SUB
  146        | MUL
  147        | RAND

  148 factor: immutable
  149       | mutable

  150 mutable: ID
  151        | ID LB exp RB

  152 immutable: LP exp RP
  153          | call
  154          | constant
  155          | LP error

  156 call: ID LP args RP
  157     | error LP

  158 args: argList
  159     | /* empty */

  160 argList: argList COMMA exp
  161        | exp
  162        | argList COMMA error

  163 constant: NUMCONST
  164         | CHARCONST
  165         | STRINGCONST
  166         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256) 6 8 9 14 15 18 21 22 28 29 30 31 32 37 38 40 43 44 55 56
    57 58 59 60 61 64 65 67 82 83 84 87 94 95 96 97 98 99 100 101 102
    103 106 107 111 114 117 120 133 138 144 155 157 162
BOOLCONST (258) 166
NUMCONST (259) 20 163
CHARCONST (260) 164
STRINGCONST (261) 165
ID (262) 19 20 21 26 27 29 30 31 32 45 46 60 77 79 150 151 156
THEN (263) 57 64 65 73 74 75
IF (264) 55 56 57 64 65 73 74 75
WHILE (265) 58 59 76 78
FOR (266) 60 61 77 79
STATIC (267) 10
INT (268) 23
BOOL (269) 24
CHAR (270) 25
ELSE (271) 56 57 65 73 75
RETURN (272) 85 86 87
BREAK (273) 88
COMMENT (274)
EQ (275) 125
ADDASS (276) 90 95 100
SUBASS (277) 91 96 101
DIVASS (278) 93 98 103
MULASS (279) 92 97 102
LEQ (280) 121
GEQ (281) 124
NEQ (282) 126
DEC (283) 105 107
INC (284) 104 106
LT (285) 122
GT (286) 123
MAX (287) 129
MIN (288) 130
ADD (289) 134
DIV (290) 140
DO (291) 58 60 76 77 78 79
BY (292) 81 83 84
TO (293) 80 81 82 84
MOD (294) 141
RAND (295) 147
SUB (296) 135 145
MUL (297) 139 146
CHSIGN (298)
SIZEOF (299)
AND (300) 112 114
OR (301) 109 111
NOT (302) 115 117
ASS (303) 60 77 79 89 94 99
SEMICOLON (304) 7 8 9 10 11 35 37 66 67 85 86 87 88
COLON (305) 17 18
LP (306) 26 27 29 30 31 32 152 155 156 157
RP (307) 26 27 30 32 152 156
LB (308) 20 21 46 151
RB (309) 20 22 46 151
COMMA (310) 12 15 41 43 160 162
LCB (311) 68
RCB (312) 68


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
declList (60)
    on left: 2 3, on right: 1 2
decl (61)
    on left: 4 5 6, on right: 2 3
varDecl (62)
    on left: 7 8 9, on right: 4
scopedVarDecl (63)
    on left: 10 11, on right: 69
varDeclList (64)
    on left: 12 13 14 15, on right: 7 8 10 11 12 15
varDeclInit (65)
    on left: 16 17 18, on right: 12 13
varDeclId (66)
    on left: 19 20 21 22, on right: 16 17
typeSpec (67)
    on left: 23 24 25, on right: 7 9 10 11 26 28 29 30 39 40
funDecl (68)
    on left: 26 27 28 29 30 31 32, on right: 5
parms (69)
    on left: 33 34, on right: 26 27 30 32
parmList (70)
    on left: 35 36 37 38, on right: 33 35 37
parmTypeList (71)
    on left: 39 40, on right: 35 36
parmIdList (72)
    on left: 41 42 43 44, on right: 39 41 43
parmId (73)
    on left: 45 46, on right: 41 42
stmt (74)
    on left: 47 48, on right: 26 27 64 71 74
matched (75)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61,
    on right: 47 56 57 58 60 65 73 75 76 77
unmatched (76)
    on left: 62 63 64 65, on right: 48 65 75 78 79
expStmt (77)
    on left: 66 67, on right: 49
compoundStmt (78)
    on left: 68, on right: 50
localDecls (79)
    on left: 69 70, on right: 68 69
stmtList (80)
    on left: 71 72, on right: 68 71
matchedselectStmt (81)
    on left: 73, on right: 53
unmatchedselectStmt (82)
    on left: 74 75, on right: 62
matchediterStmt (83)
    on left: 76 77, on right: 54
unmatchediterStmt (84)
    on left: 78 79, on right: 63
iterrange (85)
    on left: 80 81 82 83 84, on right: 77 79
returnStmt (86)
    on left: 85 86 87, on right: 51
breakStmt (87)
    on left: 88, on right: 52
exp (88)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108, on right: 66 85 89 90 91 92 93 94 95 96 97 98 151
    152 160 161
simpleExp (89)
    on left: 109 110 111, on right: 17 18 73 74 75 76 78 80 81 82 84
    108 109 111
andExp (90)
    on left: 112 113 114, on right: 109 110 112 114
unaryRelExp (91)
    on left: 115 116 117, on right: 112 113 115
relExp (92)
    on left: 118 119 120, on right: 116
relop (93)
    on left: 121 122 123 124 125 126, on right: 118 120
minmaxExp (94)
    on left: 127 128, on right: 118 119 120 127
minmaxop (95)
    on left: 129 130, on right: 127
sumExp (96)
    on left: 131 132 133, on right: 127 128 131 133
sumop (97)
    on left: 134 135, on right: 131 133
mulExp (98)
    on left: 136 137 138, on right: 131 132 136 138
mulop (99)
    on left: 139 140 141, on right: 136 138
unaryExp (100)
    on left: 142 143 144, on right: 136 137 142
unaryop (101)
    on left: 145 146 147, on right: 142 144
factor (102)
    on left: 148 149, on right: 143
mutable (103)
    on left: 150 151, on right: 89 90 91 92 93 99 100 101 102 103 104
    105 149
immutable (104)
    on left: 152 153 154 155, on right: 148
call (105)
    on left: 156 157, on right: 153
args (106)
    on left: 158 159, on right: 156
argList (107)
    on left: 160 161 162, on right: 158 160 162
constant (108)
    on left: 163 164 165 166, on right: 154


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program   go to state 6
    declList  go to state 7
    decl      go to state 8
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


state 1

    6 decl: error .
    8 varDecl: error . varDeclList SEMICOLON

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (decl)
    error  [reduce using rule 6 (decl)]
    ID     [reduce using rule 6 (decl)]
    INT    reduce using rule 6 (decl)
    BOOL   reduce using rule 6 (decl)
    CHAR   reduce using rule 6 (decl)

    varDeclList  go to state 14
    varDeclInit  go to state 15
    varDeclId    go to state 16


state 2

   27 funDecl: ID . LP parms RP stmt
   31        | ID . LP error
   32        | ID . LP parms RP error

    LP  shift, and go to state 17


state 3

   23 typeSpec: INT .

    $default  reduce using rule 23 (typeSpec)


state 4

   24 typeSpec: BOOL .

    $default  reduce using rule 24 (typeSpec)


state 5

   25 typeSpec: CHAR .

    $default  reduce using rule 25 (typeSpec)


state 6

    0 $accept: program . $end

    $end  shift, and go to state 18


state 7

    1 program: declList .
    2 declList: declList . decl

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl      go to state 19
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


state 8

    3 declList: decl .

    $default  reduce using rule 3 (declList)


state 9

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


state 10

    7 varDecl: typeSpec . varDeclList SEMICOLON
    9        | typeSpec . error SEMICOLON
   26 funDecl: typeSpec . ID LP parms RP stmt
   28        | typeSpec . error
   29        | typeSpec . ID LP error
   30        | typeSpec . ID LP parms RP error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList  go to state 22
    varDeclInit  go to state 15
    varDeclId    go to state 16


state 11

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


state 12

   14 varDeclList: error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RB

    COLON  shift, and go to state 23
    RB     shift, and go to state 24

    $default  reduce using rule 14 (varDeclList)


state 13

   19 varDeclId: ID .
   20          | ID . LB NUMCONST RB
   21          | ID . LB error

    LB  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


state 14

    8 varDecl: error varDeclList . SEMICOLON
   12 varDeclList: varDeclList . COMMA varDeclInit
   15            | varDeclList . COMMA error

    SEMICOLON  shift, and go to state 26
    COMMA      shift, and go to state 27


state 15

   13 varDeclList: varDeclInit .

    $default  reduce using rule 13 (varDeclList)


state 16

   16 varDeclInit: varDeclId .
   17            | varDeclId . COLON simpleExp

    COLON  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInit)


state 17

   27 funDecl: ID LP . parms RP stmt
   31        | ID LP . error
   32        | ID LP . parms RP error

    error  shift, and go to state 29
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RP  reduce using rule 34 (parms)

    typeSpec      go to state 30
    parms         go to state 31
    parmList      go to state 32
    parmTypeList  go to state 33


state 18

    0 $accept: program $end .

    $default  accept


state 19

    2 declList: declList decl .

    $default  reduce using rule 2 (declList)


state 20

    9 varDecl: typeSpec error . SEMICOLON
   14 varDeclList: error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RB
   28 funDecl: typeSpec error .

    SEMICOLON  shift, and go to state 34
    COLON      shift, and go to state 23
    RB         shift, and go to state 24

    SEMICOLON  [reduce using rule 14 (varDeclList)]
    COMMA      reduce using rule 14 (varDeclList)
    $default   reduce using rule 28 (funDecl)


state 21

   19 varDeclId: ID .
   20          | ID . LB NUMCONST RB
   21          | ID . LB error
   26 funDecl: typeSpec ID . LP parms RP stmt
   29        | typeSpec ID . LP error
   30        | typeSpec ID . LP parms RP error

    LP  shift, and go to state 35
    LB  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


state 22

    7 varDecl: typeSpec varDeclList . SEMICOLON
   12 varDeclList: varDeclList . COMMA varDeclInit
   15            | varDeclList . COMMA error

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 27


state 23

   18 varDeclInit: error COLON . simpleExp

    error        shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 24

   22 varDeclId: error RB .

    $default  reduce using rule 22 (varDeclId)


state 25

   20 varDeclId: ID LB . NUMCONST RB
   21          | ID LB . error

    error     shift, and go to state 62
    NUMCONST  shift, and go to state 63


state 26

    8 varDecl: error varDeclList SEMICOLON .

    $default  reduce using rule 8 (varDecl)


state 27

   12 varDeclList: varDeclList COMMA . varDeclInit
   15            | varDeclList COMMA . error

    error  shift, and go to state 64
    ID     shift, and go to state 13

    varDeclInit  go to state 65
    varDeclId    go to state 16


state 28

   17 varDeclInit: varDeclId COLON . simpleExp

    error        shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    simpleExp    go to state 66
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 29

   31 funDecl: ID LP error .
   38 parmList: error .

    SEMICOLON  reduce using rule 38 (parmList)
    RP         reduce using rule 38 (parmList)
    $default   reduce using rule 31 (funDecl)


state 30

   39 parmTypeList: typeSpec . parmIdList
   40             | typeSpec . error

    error  shift, and go to state 67
    ID     shift, and go to state 68

    parmIdList  go to state 69
    parmId      go to state 70


state 31

   27 funDecl: ID LP parms . RP stmt
   32        | ID LP parms . RP error

    RP  shift, and go to state 71


state 32

   33 parms: parmList .
   35 parmList: parmList . SEMICOLON parmTypeList
   37         | parmList . SEMICOLON error

    SEMICOLON  shift, and go to state 72

    $default  reduce using rule 33 (parms)


state 33

   36 parmList: parmTypeList .

    $default  reduce using rule 36 (parmList)


state 34

    9 varDecl: typeSpec error SEMICOLON .

    $default  reduce using rule 9 (varDecl)


state 35

   26 funDecl: typeSpec ID LP . parms RP stmt
   29        | typeSpec ID LP . error
   30        | typeSpec ID LP . parms RP error

    error  shift, and go to state 73
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RP  reduce using rule 34 (parms)

    typeSpec      go to state 30
    parms         go to state 74
    parmList      go to state 32
    parmTypeList  go to state 33


state 36

    7 varDecl: typeSpec varDeclList SEMICOLON .

    $default  reduce using rule 7 (varDecl)


state 37

  157 call: error . LP

    LP  shift, and go to state 75


state 38

  166 constant: BOOLCONST .

    $default  reduce using rule 166 (constant)


state 39

  163 constant: NUMCONST .

    $default  reduce using rule 163 (constant)


state 40

  164 constant: CHARCONST .

    $default  reduce using rule 164 (constant)


state 41

  165 constant: STRINGCONST .

    $default  reduce using rule 165 (constant)


state 42

  150 mutable: ID .
  151        | ID . LB exp RB
  156 call: ID . LP args RP

    LP  shift, and go to state 76
    LB  shift, and go to state 77

    $default  reduce using rule 150 (mutable)


state 43

  147 unaryop: RAND .

    $default  reduce using rule 147 (unaryop)


state 44

  145 unaryop: SUB .

    $default  reduce using rule 145 (unaryop)


state 45

  146 unaryop: MUL .

    $default  reduce using rule 146 (unaryop)


state 46

  115 unaryRelExp: NOT . unaryRelExp
  117            | NOT . error

    error        shift, and go to state 78
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    unaryRelExp  go to state 79
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 47

  152 immutable: LP . exp RP
  155          | LP . error

    error        shift, and go to state 80
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    exp          go to state 81
    simpleExp    go to state 82
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 83
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 48

   18 varDeclInit: error COLON simpleExp .
  109 simpleExp: simpleExp . OR andExp
  111          | simpleExp . OR error

    OR  shift, and go to state 84

    $default  reduce using rule 18 (varDeclInit)


state 49

  110 simpleExp: andExp .
  112 andExp: andExp . AND unaryRelExp
  114       | andExp . AND error

    AND  shift, and go to state 85

    $default  reduce using rule 110 (simpleExp)


state 50

  113 andExp: unaryRelExp .

    $default  reduce using rule 113 (andExp)


state 51

  116 unaryRelExp: relExp .

    $default  reduce using rule 116 (unaryRelExp)


state 52

  118 relExp: minmaxExp . relop minmaxExp
  119       | minmaxExp .
  120       | minmaxExp . relop error
  127 minmaxExp: minmaxExp . minmaxop sumExp

    EQ   shift, and go to state 86
    LEQ  shift, and go to state 87
    GEQ  shift, and go to state 88
    NEQ  shift, and go to state 89
    LT   shift, and go to state 90
    GT   shift, and go to state 91
    MAX  shift, and go to state 92
    MIN  shift, and go to state 93

    $default  reduce using rule 119 (relExp)

    relop     go to state 94
    minmaxop  go to state 95


state 53

  128 minmaxExp: sumExp .
  131 sumExp: sumExp . sumop mulExp
  133       | sumExp . sumop error

    ADD  shift, and go to state 96
    SUB  shift, and go to state 97

    $default  reduce using rule 128 (minmaxExp)

    sumop  go to state 98


state 54

  132 sumExp: mulExp .
  136 mulExp: mulExp . mulop unaryExp
  138       | mulExp . mulop error

    DIV  shift, and go to state 99
    MOD  shift, and go to state 100
    MUL  shift, and go to state 101

    $default  reduce using rule 132 (sumExp)

    mulop  go to state 102


state 55

  137 mulExp: unaryExp .

    $default  reduce using rule 137 (mulExp)


state 56

  142 unaryExp: unaryop . unaryExp
  144         | unaryop . error

    error        shift, and go to state 103
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    LP           shift, and go to state 47

    unaryExp   go to state 104
    unaryop    go to state 56
    factor     go to state 57
    mutable    go to state 58
    immutable  go to state 59
    call       go to state 60
    constant   go to state 61


state 57

  143 unaryExp: factor .

    $default  reduce using rule 143 (unaryExp)


state 58

  149 factor: mutable .

    $default  reduce using rule 149 (factor)


state 59

  148 factor: immutable .

    $default  reduce using rule 148 (factor)


state 60

  153 immutable: call .

    $default  reduce using rule 153 (immutable)


state 61

  154 immutable: constant .

    $default  reduce using rule 154 (immutable)


state 62

   21 varDeclId: ID LB error .

    $default  reduce using rule 21 (varDeclId)


state 63

   20 varDeclId: ID LB NUMCONST . RB

    RB  shift, and go to state 105


state 64

   15 varDeclList: varDeclList COMMA error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RB

    COLON  shift, and go to state 23
    RB     shift, and go to state 24

    $default  reduce using rule 15 (varDeclList)


state 65

   12 varDeclList: varDeclList COMMA varDeclInit .

    $default  reduce using rule 12 (varDeclList)


state 66

   17 varDeclInit: varDeclId COLON simpleExp .
  109 simpleExp: simpleExp . OR andExp
  111          | simpleExp . OR error

    OR  shift, and go to state 84

    $default  reduce using rule 17 (varDeclInit)


state 67

   40 parmTypeList: typeSpec error .
   44 parmIdList: error .

    SEMICOLON  reduce using rule 40 (parmTypeList)
    SEMICOLON  [reduce using rule 44 (parmIdList)]
    RP         reduce using rule 40 (parmTypeList)
    RP         [reduce using rule 44 (parmIdList)]
    COMMA      reduce using rule 44 (parmIdList)
    $default   reduce using rule 40 (parmTypeList)


state 68

   45 parmId: ID .
   46       | ID . LB RB

    LB  shift, and go to state 106

    $default  reduce using rule 45 (parmId)


state 69

   39 parmTypeList: typeSpec parmIdList .
   41 parmIdList: parmIdList . COMMA parmId
   43           | parmIdList . COMMA error

    COMMA  shift, and go to state 107

    $default  reduce using rule 39 (parmTypeList)


state 70

   42 parmIdList: parmId .

    $default  reduce using rule 42 (parmIdList)


state 71

   27 funDecl: ID LP parms RP . stmt
   32        | ID LP parms RP . error

    error        shift, and go to state 108
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    IF           shift, and go to state 109
    WHILE        shift, and go to state 110
    FOR          shift, and go to state 111
    RETURN       shift, and go to state 112
    BREAK        shift, and go to state 113
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47
    LCB          shift, and go to state 114

    stmt                 go to state 115
    matched              go to state 116
    unmatched            go to state 117
    expStmt              go to state 118
    compoundStmt         go to state 119
    matchedselectStmt    go to state 120
    unmatchedselectStmt  go to state 121
    matchediterStmt      go to state 122
    unmatchediterStmt    go to state 123
    returnStmt           go to state 124
    breakStmt            go to state 125
    exp                  go to state 126
    simpleExp            go to state 82
    andExp               go to state 49
    unaryRelExp          go to state 50
    relExp               go to state 51
    minmaxExp            go to state 52
    sumExp               go to state 53
    mulExp               go to state 54
    unaryExp             go to state 55
    unaryop              go to state 56
    factor               go to state 57
    mutable              go to state 83
    immutable            go to state 59
    call                 go to state 60
    constant             go to state 61


state 72

   35 parmList: parmList SEMICOLON . parmTypeList
   37         | parmList SEMICOLON . error

    error  shift, and go to state 127
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 128


state 73

   29 funDecl: typeSpec ID LP error .
   38 parmList: error .

    SEMICOLON  reduce using rule 38 (parmList)
    RP         reduce using rule 38 (parmList)
    $default   reduce using rule 29 (funDecl)


state 74

   26 funDecl: typeSpec ID LP parms . RP stmt
   30        | typeSpec ID LP parms . RP error

    RP  shift, and go to state 129


state 75

  157 call: error LP .

    $default  reduce using rule 157 (call)


state 76

  156 call: ID LP . args RP

    error        shift, and go to state 130
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    RP  reduce using rule 159 (args)

    exp          go to state 131
    simpleExp    go to state 82
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 83
    immutable    go to state 59
    call         go to state 60
    args         go to state 132
    argList      go to state 133
    constant     go to state 61


state 77

  151 mutable: ID LB . exp RB

    error        shift, and go to state 130
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    exp          go to state 134
    simpleExp    go to state 82
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 83
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 78

  117 unaryRelExp: NOT error .
  157 call: error . LP

    LP  shift, and go to state 75

    $default  reduce using rule 117 (unaryRelExp)


state 79

  115 unaryRelExp: NOT unaryRelExp .

    $default  reduce using rule 115 (unaryRelExp)


state 80

   94 exp: error . ASS exp
   95    | error . ADDASS exp
   96    | error . SUBASS exp
   97    | error . MULASS exp
   98    | error . DIVASS exp
  106    | error . INC
  107    | error . DEC
  155 immutable: LP error .
  157 call: error . LP

    ADDASS  shift, and go to state 135
    SUBASS  shift, and go to state 136
    DIVASS  shift, and go to state 137
    MULASS  shift, and go to state 138
    DEC     shift, and go to state 139
    INC     shift, and go to state 140
    ASS     shift, and go to state 141
    LP      shift, and go to state 75

    $default  reduce using rule 155 (immutable)


state 81

  152 immutable: LP exp . RP

    RP  shift, and go to state 142


state 82

  108 exp: simpleExp .
  109 simpleExp: simpleExp . OR andExp
  111          | simpleExp . OR error

    OR  shift, and go to state 84

    $default  reduce using rule 108 (exp)


state 83

   89 exp: mutable . ASS exp
   90    | mutable . ADDASS exp
   91    | mutable . SUBASS exp
   92    | mutable . MULASS exp
   93    | mutable . DIVASS exp
   99    | mutable . ASS error
  100    | mutable . ADDASS error
  101    | mutable . SUBASS error
  102    | mutable . MULASS error
  103    | mutable . DIVASS error
  104    | mutable . INC
  105    | mutable . DEC
  149 factor: mutable .

    ADDASS  shift, and go to state 143
    SUBASS  shift, and go to state 144
    DIVASS  shift, and go to state 145
    MULASS  shift, and go to state 146
    DEC     shift, and go to state 147
    INC     shift, and go to state 148
    ASS     shift, and go to state 149

    $default  reduce using rule 149 (factor)


state 84

  109 simpleExp: simpleExp OR . andExp
  111          | simpleExp OR . error

    error        shift, and go to state 150
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    andExp       go to state 151
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 85

  112 andExp: andExp AND . unaryRelExp
  114       | andExp AND . error
